res/examples/invalid/block_returning_prefix_expr_negate_unit.eg
-();

// out: TypeError: mismatched types: expected type `number` but received `()`